// Vitest Snapshot v1

exports[`Layout > Should render when disabled: { footer: true } 1`] = `
<DocumentFragment>
  <p>
    A11yMenuCmpt
  </p>
  <p>
    HeaderCmpt
  </p>
  <p>
    MenuCmpt
  </p>
  <p>
    TitleBarCmpt
  </p>
  <main
    class="af-main"
    id="main-content"
  >
    <section
      class="container"
    />
  </main>
</DocumentFragment>
`;

exports[`Layout > Should render when disabled: { header: true } 1`] = `
<DocumentFragment>
  <p>
    A11yMenuCmpt
  </p>
  <p>
    MenuCmpt
  </p>
  <p>
    TitleBarCmpt
  </p>
  <main
    class="af-main"
    id="main-content"
  >
    <section
      class="container"
    />
  </main>
  <p>
    FooterCmpt
  </p>
</DocumentFragment>
`;

exports[`Layout > Should render when disabled: { header: true, title: true, …(2) } 1`] = `
<DocumentFragment>
  <p>
    A11yMenuCmpt
  </p>
  <main
    class="af-main"
    id="main-content"
  />
</DocumentFragment>
`;

exports[`Layout > Should render when disabled: { menu: true } 1`] = `
<DocumentFragment>
  <p>
    A11yMenuCmpt
  </p>
  <p>
    HeaderCmpt
  </p>
  <p>
    TitleBarCmpt
  </p>
  <main
    class="af-main"
    id="main-content"
  >
    <section
      class="container"
    />
  </main>
  <p>
    FooterCmpt
  </p>
</DocumentFragment>
`;

exports[`Layout > Should render when disabled: { title: true } 1`] = `
<DocumentFragment>
  <p>
    A11yMenuCmpt
  </p>
  <p>
    HeaderCmpt
  </p>
  <p>
    MenuCmpt
  </p>
  <main
    class="af-main"
    id="main-content"
  >
    <section
      class="container"
    />
  </main>
  <p>
    FooterCmpt
  </p>
</DocumentFragment>
`;
